--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -62,6 +62,7 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
+  <!-- linking JS file -->
 <script src="js/app.js"></script>
 </body>
 </html>
